Project

General

Profile

Actions

Bug #37879

closed

rgw: fix prefix handling in LCFilter

Added by Matt Benjamin over 5 years ago. Updated about 3 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
% Done:

0%

Source:
Support
Tags:
Backport:
nautilus,mimic,luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

A lifecycle configuration document such as the following is legal (see examples at https://docs.aws.amazon.com/AmazonS3/latest/dev/intro-lifecycle-rules.html), but was rejected due to RGW-internal prefix handling.

"""

<LifecycleConfiguration xmlns="http://s3.amazonaws.com/doc/2006-03-01/&quot;>
<Rule>
<ID>delete-7-days</ID>
<Filter>
<Tag>
<Key>suffix</Key>
<Value>WMV</Value>
</Tag>
</Filter>
<Status>Enabled</Status>
<Expiration>
<Days>7</Days>
</Expiration>
</Rule>
<Rule>
<ID>delete-8-days</ID>
<Filter>
<Tag>
<Key>tim</Key>
<Value>tam</Value>
</Tag>
</Filter>
<Status>Enabled</Status>
<Expiration>
<Days>8</Days>
</Expiration>
</Rule>
</LifecycleConfiguration>
"""


Related issues 4 (0 open4 closed)

Has duplicate rgw - Bug #38758: rgw: put lifecycle configuration fails if Prefix is not set (2)Duplicate03/15/2019

Actions
Copied to rgw - Backport #38368: luminous: rgw: fix prefix handling in LCFilterRejectedActions
Copied to rgw - Backport #38369: mimic: rgw: fix prefix handling in LCFilterRejectedActions
Copied to rgw - Backport #40007: nautilus: rgw: fix prefix handling in LCFilterResolvedNathan CutlerActions
Actions #1

Updated by Matt Benjamin over 5 years ago

  • Status changed from In Progress to Fix Under Review
Actions #2

Updated by Matt Benjamin about 5 years ago

  • Status changed from Fix Under Review to Pending Backport
  • Backport set to mimic,luminous
Actions #3

Updated by Nathan Cutler about 5 years ago

  • Copied to Backport #38368: luminous: rgw: fix prefix handling in LCFilter added
Actions #4

Updated by Nathan Cutler about 5 years ago

  • Copied to Backport #38369: mimic: rgw: fix prefix handling in LCFilter added
Actions #6

Updated by Matt Benjamin about 5 years ago

@Nathan Cutler, @asingh, this PR replaces the prior change

Actions #7

Updated by Nathan Cutler about 5 years ago

  • Status changed from Pending Backport to New

waiting for new master fix

Actions #8

Updated by Casey Bodley about 5 years ago

  • Has duplicate Bug #38758: rgw: put lifecycle configuration fails if Prefix is not set (2) added
Actions #9

Updated by Matt Benjamin almost 5 years ago

  • Status changed from New to Pending Backport
  • Backport changed from mimic,luminous to nautilus,mimic,luminous
Actions #10

Updated by Nathan Cutler almost 5 years ago

  • Copied to Backport #40007: nautilus: rgw: fix prefix handling in LCFilter added
Actions #11

Updated by Nathan Cutler almost 5 years ago

  • Pull request ID set to 26518
Actions #12

Updated by Nathan Cutler about 3 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF