rgw: lifcycle: don't reject compound rules with empty prefix

A rule containing a tag filter but no constraining prefix is
legal, as is a sequence of >1 such rules.

Fixes: http://tracker.ceph.com/issues/37879

Signed-off-by: Matt Benjamin <mbenjamin@redhat.com>
(cherry picked from commit cdc2c218baec4f713c705edcd2a274be94c0e85a)